# clinical-trial-auditor

./: .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  Round2_Training_ClinicalTrialAuditor.ipynb  inference.py  openenv.yaml  pyproject.toml  test_environment.py
clinical_trial_auditor/: __init__.py  client.py  models.py  openenv.yaml
clinical_trial_auditor/server/: Dockerfile  __init__.py  app.py  environment.py  graders.py  protocol_generator.py  protocols.py  requirements.txt
server/: app.py  protocol_generator.py
