[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clinical-trial-auditor"
version = "1.0.0"
description = "OpenEnv environment for AI-powered clinical trial protocol auditing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aditya Satapathy", email = "adisatapathy@example.com"},
]
keywords = ["openenv", "rl", "clinical-trials", "protocol-audit", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gitadi2/clinical-trial-auditor"
Repository = "https://github.com/gitadi2/clinical-trial-auditor"

[tool.setuptools.packages.find]
include = ["clinical_trial_auditor*"]
