[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clinical-trial-auditor"
version = "1.0.0"
description = "OpenEnv environment for clinical trial protocol auditing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aditya Satapathy"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "clinical_trial_auditor.server.app:run"

[tool.setuptools.packages.find]
include = ["clinical_trial_auditor*"]
